[package]
name = "atlas_priority_fee_estimator"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = { version = "3", features = ["full"] }
solana-client = { version = "3" }
solana-account-decoder = { version = "3" }
solana-transaction-status = { version = "3" }
solana-compute-budget = { version = "3" }
solana-compute-budget-instruction = { version = "3", features = [
    "agave-unstable-api",
] }
solana-compute-budget-interface = { version = "3" }
solana-svm-transaction = { version = "3" }
agave-feature-set = { version = "3" }
solana-program-runtime = { version = "3" }
solana-packet = { version = "3" }
solana-program = { version = "3" }
solana-message = { version = "3" }
crossbeam-channel = "0.5.6"
tokio = { version = "1.25.0", features = ["full"] }
csv = "1.3.0"
cadence = "1.6.0"
cadence-macros = "1.6.0"
dashmap = "6.1.0"
queues = "1.1.0"
jsonrpsee = { version = "0.26.0", features = [
    "server",
    "http-client",
    "macros",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
    "json",
    "env-filter",
    "ansi",
] }
tracing-appender = "0.2.3"
serde = { version = "1.0.190", features = ["derive"] }
base64 = "0.22.1"
bincode = "1.3.3"
yellowstone-grpc-proto = { git = "https://github.com/helius-labs/yellowstone-grpc", tag = "v3.0.8" }
yellowstone-grpc-client = { git = "https://github.com/helius-labs/yellowstone-grpc", tag = "v3.0.8" }
rand = "0.9.2"
futures = "0.3.24"
figment = { version = "0.10.6", features = ["env", "test"] }
tower = { version = "0.5.2", features = ["full"] }
thiserror = "2.0.17"
anyhow = "1.0.100"
statrs = "0.18.0"
rapidhash = "4.1.1"
