[workspace]
members = ["crates/priority-fee-core", "."]
resolver = "2"

[workspace.lints.rust]
unreachable_pub = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
redundant_pub_crate = "warn"
missing_const_for_fn = "warn"

[workspace.dependencies]
# Solana Ecosystem
solana-sdk = { version = "3", features = ["full"] }
solana-client = "3"
solana-account-decoder = "3"
solana-transaction-status = "3"
solana-compute-budget = "3"
solana-compute-budget-instruction = { version = "3", features = [
    "agave-unstable-api",
] }
solana-compute-budget-interface = "3"
solana-svm-transaction = "3"
agave-feature-set = "3"
solana-program-runtime = "3"
solana-packet = "3"
solana-program = "3"
solana-message = "3"

# General Dependencies
dashmap = "6.1"
rapidhash = "4.1"
statrs = "0.18"
queues = "1.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "json",
    "env-filter",
    "ansi",
] }
tracing-appender = "0.2"
tokio = { version = "1.25", features = ["full"] }
futures = "0.3"

# Service Layer Specific
jsonrpsee = { version = "0.26", features = ["server", "http-client", "macros"] }
yellowstone-grpc-proto = { git = "https://github.com/helius-labs/yellowstone-grpc", tag = "v3.0.8" }
yellowstone-grpc-client = { git = "https://github.com/helius-labs/yellowstone-grpc", tag = "v3.0.8" }
cadence = "1.6"
cadence-macros = "1.6"
crossbeam-channel = "0.5"
csv = "1.3"
base64 = "0.22"
bincode = "1.3"
rand = "0.9"
figment = { version = "0.10", features = ["env", "test"] }
tower = { version = "0.5", features = ["full"] }

# Core Crate
priority-fee-core = { path = "crates/priority-fee-core" }

[package]
name = "atlas_priority_fee_estimator"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
priority-fee-core.workspace = true
solana-sdk.workspace = true
solana-client.workspace = true
solana-account-decoder.workspace = true
solana-transaction-status.workspace = true
solana-compute-budget.workspace = true
solana-compute-budget-instruction.workspace = true
solana-compute-budget-interface.workspace = true
solana-svm-transaction.workspace = true
agave-feature-set.workspace = true
solana-program-runtime.workspace = true
solana-packet.workspace = true
solana-program.workspace = true
solana-message.workspace = true
crossbeam-channel.workspace = true
tokio.workspace = true
csv.workspace = true
cadence.workspace = true
cadence-macros.workspace = true
dashmap.workspace = true
queues.workspace = true
jsonrpsee.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
base64.workspace = true
bincode.workspace = true
yellowstone-grpc-proto.workspace = true
yellowstone-grpc-client.workspace = true
rand.workspace = true
futures.workspace = true
figment.workspace = true
tower.workspace = true
thiserror.workspace = true
anyhow.workspace = true
statrs.workspace = true
rapidhash.workspace = true
